# hwdc-2025-mcp-league-starter

./: .dockerignore  .env.docker  .env.docker.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLOUD_RUN_DEPLOYMENT.md  Dockerfile  README.md  WORKSHOP_GUIDE.md  cloudbuild.yaml  docker-compose.yaml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  start.sh  supervisord.conf
backend/: .env.example  PEER_TO_PEER_SETUP.md  pyproject.toml
backend/defaults/: default_active_llm_model.json  default_agno_prompts.json  default_agno_tools.json  default_llm_models.json  default_mcp_servers.json
backend/docs/: AGNO_TOOLS_PROMPTS.md
backend/docs/architecture/: mcp-integration.md
backend/src/: config.py  main.py
backend/src/api/: exception_handlers.py  mcp_server.py
backend/src/api/v1/: agno_router.py  conversation_router.py  mcp_router.py
backend/src/core/: __init__.py  exceptions.py  middleware.py
backend/src/integrations/llm/: __init__.py  config_store.py  factory.py  prompts_config.py  prompts_store.py  providers.py  tools_config.py  tools_store.py
backend/src/integrations/mcp/: __init__.py  config.py  default_servers.json  http_client.py  http_connection.py  http_toolkit.py  manager.py  server.py  server_params.py  toolkit.py
backend/src/models/: __init__.py  agno.py  base.py  conversation.py  mcp.py  mcp_tools.py
backend/src/shared/exceptions/: __init__.py  agno.py  mcp.py
backend/src/usecases/conversation/: conversation_usecase.py
backend/tests/: conftest.py
backend/tests/unit/: test_config.py
(+78 files in other folders)
