[project]
name = "backend"
version = "2.1.1"
description = "HWDC 2025 FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "agno",
    "ollama>=0.5.4",
    "openai>=1.108.1",
    "mcp>=1.14.1",
    "fastmcp>=2.12.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "C4", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src/"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "api: marks tests related to the API layer",
    "application: marks tests related to the application layer",
]
